# yt-api-legacy

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.example  config.yml.example  setup.py
.github/workflows/: rust.yml
assets/css/: banner.css  chevron.css  frontend-fixes.css  iconochive.css  video-js.css  www-core-vflEYJjuP.css  www-core-vflkNMZid.css  www-core-webp-vflw8Yxd1.css  www-guide-vfl7J4hMD.css  www-guide-vflW_Hi6H.css  www-guide-webp-vflHhT4z1.css  www-home-c4-vfl0Kj6uE.css  www-home-c4-vflPNKlE7.css  www-pageframe-vfl0aBbD_.css  www-pageframe-vflADUc_s.css  www-pageframe-webp-vflK9h4KL.css  www-results-webp-vfl8cJikh.css
assets/embed/: script.js  styles.css
assets/html/: index.html  login.html
assets/html/frontend/: channel.html  embed.html  index.html  login.html  logout.html  results.html  watch.html
assets/html/frontend/partials/: navbar.html  sidebar.html
assets/js/: bundle-playback.js  bundle-video.js  donation-banner.min.js  guide-toggle.js  load-subscriptions.js  spf-vflEwuTrg.js  spf-vflSy1p53.js  videojs.min.js  www-scheduler-vflKNUgKf.js  www-search-ads-vflOw2R2-.js
html/: index.html
src/: check.rs  config.rs  log.rs  main.rs
src/routes/: actions.rs  additional.rs  auth.rs  auth_routes.rs  channel.rs  frontend.rs  mod.rs  search.rs  video.rs
