[package]
name = "yt-api-legacy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
config = "0.13"
env_logger = "0.10"
log = "0.4"
utoipa = { version = "4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }
chrono = "0.4"
colored = "2.0"
qrcode = "0.14"
image = "0.24"
base64 = "0.21"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }
html-escape = "0.2"
lru = "0.12"
lazy_static = "1.4"
futures-util = "0.3.31"
